--- a/packages/3id-did-resolver/package.json
+++ b/packages/3id-did-resolver/package.json
@@ -43,7 +43,8 @@
   },
   "devDependencies": {
     "@ceramicnetwork/http-client": "^2.0.0-rc.0",
-    "did-resolver": "^3.1.5"
+    "did-resolver": "^3.1.5",
+    "typescript": "^4.5.4"
   },
   "gitHead": "34eeee25597b0a60def72906c26d3afd6230aaf1"
 }
