--- a/packages/canary-integration/package.json
+++ b/packages/canary-integration/package.json
@@ -31,7 +31,8 @@
     "key-did-provider-ed25519": "^1.1.0",
     "key-did-resolver": "^2.0.0-rc.0",
     "merge-options": "^3.0.4",
-    "pkh-did-resolver": "^1.0.0-rc.0"
+    "pkh-did-resolver": "^1.0.0-rc.0",
+    "typescript": "^4.5.4"
   },
   "gitHead": "34eeee25597b0a60def72906c26d3afd6230aaf1"
 }
