--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -77,6 +77,7 @@
     "@types/stream-to-array": "^2.3.0",
     "get-port": "^6.0.0",
     "rxjs": "^7.5.2",
-    "tmp-promise": "^3.0.3"
+    "tmp-promise": "^3.0.3",
+    "typescript": "^4.5.4"
   }
 }
