--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -70,7 +70,8 @@
     "key-did-provider-ed25519": "^1.1.0",
     "key-did-resolver": "^2.0.0-rc.0",
     "mockdate": "^3.0.5",
-    "tmp-promise": "^3.0.3"
+    "tmp-promise": "^3.0.3",
+    "typescript": "^4.5.4"
   },
   "gitHead": "34eeee25597b0a60def72906c26d3afd6230aaf1"
 }
