--- a/packages/http-client/package.json
+++ b/packages/http-client/package.json
@@ -42,7 +42,8 @@
   },
   "devDependencies": {
     "dids": "^3.0.0-alpha.12",
-    "multiformats": "^9.5.8"
+    "multiformats": "^9.5.8",
+    "typescript": "^4.5.4"
   },
   "gitHead": "34eeee25597b0a60def72906c26d3afd6230aaf1"
 }
