--- a/packages/ipfs-daemon/package.json
+++ b/packages/ipfs-daemon/package.json
@@ -51,6 +51,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.3",
     "@types/node": "^17.0.5",
-    "tsm": "^2.2.1"
+    "tsm": "^2.2.1",
+    "typescript": "^4.5.4"
   }
 }
