--- a/packages/ipfs-topology/package.json
+++ b/packages/ipfs-topology/package.json
@@ -34,6 +34,7 @@
     "cross-fetch": "^3.1.4"
   },
   "devDependencies": {
-    "multiaddr": "^10.0.1"
+    "multiaddr": "^10.0.1",
+    "typescript": "^4.5.4"
   }
 }
