--- a/packages/key-did-resolver/package.json
+++ b/packages/key-did-resolver/package.json
@@ -40,7 +40,8 @@
   },
   "devDependencies": {
     "@types/varint": "^6.0.0",
-    "did-resolver": "^3.1.5"
+    "did-resolver": "^3.1.5",
+    "typescript": "^4.5.4"
   },
   "gitHead": "c58eb9659f5fdd976aca2db6465619c20ba30ff9"
 }
