--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -33,7 +33,8 @@
     "clean": "npx rimraf ./lib"
   },
   "dependencies": {
-    "rotating-file-stream": "^3.0.2"
+    "rotating-file-stream": "^3.0.2",
+    "typescript": "^4.5.4"
   },
   "devDependencies": {
     "@types/node": "^17.0.5"
