--- a/packages/pinning-aggregation/package.json
+++ b/packages/pinning-aggregation/package.json
@@ -40,7 +40,8 @@
     "@ceramicnetwork/pinning-ipfs-backend": "^2.0.0-rc.0",
     "@ceramicnetwork/pinning-powergate-backend": "^2.0.0-rc.0",
     "ipfs-core-types": "~0.9.0",
-    "multiformats": "^9.5.8"
+    "multiformats": "^9.5.8",
+    "typescript": "^4.5.4"
   },
   "publishConfig": {
     "access": "public"
