--- a/packages/pinning-powergate-backend/package.json
+++ b/packages/pinning-powergate-backend/package.json
@@ -38,7 +38,8 @@
   },
   "devDependencies": {
     "@ceramicnetwork/common": "^2.0.0-rc.0",
-    "multiformats": "^9.5.8"
+    "multiformats": "^9.5.8",
+    "typescript": "^4.5.4"
   },
   "publishConfig": {
     "access": "public"
