--- a/packages/pkh-did-resolver/package.json
+++ b/packages/pkh-did-resolver/package.json
@@ -36,7 +36,8 @@
     "caip": "~1.0.0"
   },
   "devDependencies": {
-    "did-resolver": "^3.1.5"
+    "did-resolver": "^3.1.5",
+    "typescript": "^4.5.4"
   },
   "gitHead": "c58eb9659f5fdd976aca2db6465619c20ba30ff9"
 }
