--- a/packages/stream-caip10-link-handler/package.json
+++ b/packages/stream-caip10-link-handler/package.json
@@ -41,7 +41,8 @@
     "@types/lodash.clonedeep": "^4.5.6",
     "lodash.clonedeep": "^4.5.0",
     "multiformats": "^9.5.8",
-    "uint8arrays": "^3.0.0"
+    "uint8arrays": "^3.0.0",
+    "typescript": "^4.5.4"
   },
   "gitHead": "4f42c6ac204ad25e66efda4e24aed12c339b3c98"
 }
