--- a/packages/stream-tile-handler/package.json
+++ b/packages/stream-tile-handler/package.json
@@ -46,7 +46,8 @@
     "did-resolver": "^3.1.5",
     "dids": "^3.0.0-alpha.12",
     "key-did-resolver": "^2.0.0-rc.0",
-    "multiformats": "^9.5.8"
+    "multiformats": "^9.5.8",
+    "typescript": "^4.5.4"
   },
   "gitHead": "4f42c6ac204ad25e66efda4e24aed12c339b3c98"
 }
